Updating Readme File

--- a/Spam_Mail_Prediction.ipynb
+++ b/Spam_Mail_Prediction.ipynb
@@ -187,11 +187,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 18,
       "metadata": {
         "id": "c_C7ZzhYHldU"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Data: (4457,) \n",
+            "Testing Data: (1115,)\n"
+          ]
+        }
+      ],
       "source": [
         "# separating the data as texts and label\n",
         "X = mail_data['Message']\n",
@@ -207,7 +216,8 @@
         "\n",
         "# convert Y_train and Y_test values as integers\n",
         "Y_train = Y_train.astype('int')\n",
-        "Y_test = Y_test.astype('int')\n"
+        "Y_test = Y_test.astype('int')\n",
+        "print(f\"Training Data: {Y_train.shape} \\nTesting Data: {Y_test.shape}\")\n"
       ]
     },
     {
