Adding Predection System

--- a/Spam_Mail_Prediction.ipynb
+++ b/Spam_Mail_Prediction.ipynb
@@ -1529,6 +1529,44 @@
         "plt.legend()\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Predection System"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Prediction: Spam mail\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_mail = [\"URGENT! You have won a 1 week FREE membership in our Â£100,000 Prize Jackpot! Txt the word: CLAIM to No: 81010 T&C www.dbuk.net LCCLTD POBOX 4403LDNW1A7RW18\"]\n",
+        "\n",
+        "# convert text to feature vectors\n",
+        "input_data_features = feature_extraction.transform(input_mail)\n",
+        "\n",
+        "# making prediction\n",
+        "\n",
+        "prediction = nb.predict(input_data_features)\n",
+        "\n",
+        "\n",
+        "if (prediction[0]==1):\n",
+        "  print('Prediction: Inbox mail')\n",
+        "\n",
+        "else:\n",
+        "  print('Prediction: Spam mail')"
+      ]
     }
   ],
   "metadata": {
